//////////////////////////////////////////////////////
// apl（アプリDB：商品関連）
// 方針：内部参照は uuid、外部ID（楽天）は unique で保持
//////////////////////////////////////////////////////

Table apl.genre {
  id uuid [pk]
  rakuten_genre_id int [not null, unique]
  name varchar [not null]
  level int [not null]
  parent_id uuid [ref: > apl.genre.id, null]

  last_source_hash varchar [null, note: '前回ETL処理時のsource_hash']
  last_source_version int [null, note: 'hash生成ロジックver']

  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (parent_id)
    (level)
  }
}

Table apl.tag_group {
  id uuid [pk]
  rakuten_tag_group_id int [not null, unique]
  name varchar [not null]

  last_source_hash varchar [null, note: '前回ETL処理時のsource_hash']
  last_source_version int [null, note: 'hash生成ロジックver']

  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table apl.tag {
  id uuid [pk]
  rakuten_tag_id int [not null, unique]
  name varchar [not null]
  group_id uuid [not null, ref: > apl.tag_group.id]
  parent_id uuid [ref: > apl.tag.id, null]

  last_source_hash varchar [null, note: '前回ETL処理時のsource_hash']
  last_source_version int [null, note: 'hash生成ロジックver']

  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (group_id)
    (parent_id)
  }
}

Table apl.shop {
  id uuid [pk]
  shop_code varchar [not null, unique]
  shop_name varchar [not null]
  shop_url text [not null]
  shop_of_the_year_flag int [null]

  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table apl.item {
  id uuid [pk]
  item_code varchar [not null, unique]

  item_name varchar [not null]
  item_url text [not null]
  affiliate_url text [null]
  catchcopy text [null]
  item_caption text [null]
  image_flag int [null]

  shop_id uuid [not null, ref: > apl.shop.id]
  genre_id uuid [ref: > apl.genre.id, null]

  credit_card_flag int [null]

  // 生存管理（追加）
  last_seen_at timestamptz [not null, default: `now()`, note: 'ETLで取得できたら更新']
  is_active bool [not null, default: true, note: '一定期間見えない等でfalse']

  last_source_hash varchar [null]
  last_source_version int [null]

  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (genre_id)
    (shop_id)
    (is_active)
    (last_seen_at)
  }
}

Table apl.item_tag {
  item_id uuid [not null, ref: > apl.item.id]
  tag_id uuid [not null, ref: > apl.tag.id]
  created_at timestamptz [not null]

  indexes {
    (item_id, tag_id) [pk]
    (tag_id)
  }
}

Table apl.item_image {
  id bigserial [pk]
  item_id uuid [not null, ref: > apl.item.id]
  size varchar [not null, note: 'small|medium']
  url text [not null]
  sort_order int [null]
  created_at timestamptz [not null]

  indexes {
    (item_id)
    (item_id, size, sort_order) [unique]
  }
}

Table apl.item_market_snapshot {
  id bigserial [pk]
  item_id uuid [not null, ref: > apl.item.id]
  collected_at timestamptz [not null]

  item_price int [null]
  tax_flag int [null]
  postage_flag int [null]

  gift_flag int [null]
  availability int [null]
  asuraku_flag int [null]
  asuraku_closing_time varchar [null]
  asuraku_area varchar [null]

  start_time timestamptz [null]
  end_time timestamptz [null]

  point_rate int [null]
  point_rate_start_time timestamptz [null]
  point_rate_end_time timestamptz [null]

  indexes {
    (item_id, collected_at) [unique]
    (collected_at)
  }
}

Table apl.item_review_snapshot {
  id bigserial [pk]
  item_id uuid [not null, ref: > apl.item.id]
  collected_at timestamptz [not null]
  review_count int [null]
  review_average float [null]

  indexes {
    (item_id, collected_at) [unique]
    (collected_at)
  }
}

Table apl.item_rank_snapshot {
  id bigserial [pk]
  item_id uuid [not null, ref: > apl.item.id]
  collected_at timestamptz [not null]
  rank_type varchar [not null]
  genre_id uuid [ref: > apl.genre.id, null]
  title varchar [null]
  rank int [not null]

  indexes {
    (rank_type, genre_id, item_id, collected_at) [unique]
    (rank_type, collected_at)
    (rank_type, genre_id, collected_at)
    (rank_type, genre_id, rank, collected_at)
  }
}

Table apl.item_features {
  item_id uuid [pk, ref: > apl.item.id]

  price_yen int [null]
  price_log float [null]
  point_rate int [null]
  availability int [null]

  review_average float [null]
  review_count int [null]
  review_count_log float [null]

  rank int [null]
  popularity_score float [null]

  rakuten_genre_id int [null]
  tag_ids int[] [null]

  features_version int [not null]
  computed_at timestamptz [not null]

  indexes {
    (computed_at)
    (features_version)
    (popularity_score)
  }
}

Table apl.item_embedding_source {
  item_id uuid [pk, ref: > apl.item.id]
  source_text text [not null]
  source_hash varchar [not null]
  source_version int [not null]
  updated_at timestamptz [not null]
}

Table apl.item_embedding {
  item_id uuid [not null, ref: > apl.item.id]
  model varchar [not null]
  embedding vector [not null]
  created_at timestamptz [not null]

  indexes {
    (item_id, model) [pk]
    (model)
  }
}


//////////////////////////////////////////////////////
// Enum
//////////////////////////////////////////////////////

// UserRole: USER / ADMIN
Enum apl.user_role {
  USER
  ADMIN
}

// Gender: MALE / FEMALE
Enum apl.gender {
  MALE
  FEMALE
}

// AgeRange
Enum apl.age_range {
  TEEN
  TWENTIES
  THIRTIES
  FORTIES
  FIFTIES
  SIXTIES
  SEVENTIES_PLUS
  UNKNOWN
}

// RelationType
Enum apl.relation_type {
  BOSS
  SUBORDINATE
  COWORKER
  CLIENT
  FRIEND
  PARTNER
  SPOUSE
  PARENT
  CHILD
  SIBLING
  GRANDPARENT
  RELATIVE
  TEACHER
  OTHER
  UNSPECIFIED
}

// EventType
Enum apl.event_type {
  BIRTHDAY
  CHRISTMAS
  VALENTINE
  WHITE_DAY
  MOTHERS_DAY
  FATHERS_DAY
  RESPECT_FOR_AGED
  WEDDING
  BIRTH_CELEBRATION
  MOVING
  PROMOTION
  THANKS
  APOLOGY
  JOB_CHANGE
  ANNIVERSARY
  NONE
}

// BudgetRange
Enum apl.budget_range {
  U3000
  B3000_5000
  B5000_8000
  B8000_12000
  B12000_20000
  O20000
}


//////////////////////////////////////////////////////
// apl（アプリDB：ユーザー/レコメンド）
//////////////////////////////////////////////////////

Table apl.user_profile {
  id uuid [pk, ref: > auth.users.id]
  name varchar [not null]
  role varchar [not null, default: 'USER', note: 'USER/ADMIN']
  created_at timestamptz [not null, default: `now()`]
}

Table apl.event {
  id uuid [pk]
  name varchar [not null]
  scope varchar [not null, default: 'COMMON', note: 'COMMON/PRIVATE']
  start_date timestamptz [null]
  end_date timestamptz [null]
  default_budget_min int [null]
  default_budget_max int [null]
  created_by uuid [ref: > auth.users.id, null, note: 'COMMONならNULL、PRIVATEなら必須']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [null]

  indexes {
    (scope)
    (created_by)
  }
}

Table apl.recipient {
  id uuid [pk]
  name varchar [not null]
  age int [null]
  birthday_date date [null]
  gender varchar [null, note: 'MALE/FEMALE']
  user_id uuid [ref: > auth.users.id]
  relation varchar [null]
  note text [null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [null]
}

Table apl.event_recipient {
  id uuid [pk]
  user_id uuid [ref: > auth.users.id]
  event_id uuid [ref: > apl.event.id]
  recipient_id uuid [ref: > apl.recipient.id]
  budget_min int [null]
  budget_max int [null]
  created_at timestamptz [not null, default: `now()`]
}

Table apl.context {
  id uuid [pk]
  user_id uuid [ref: > auth.users.id]
  event_id uuid [ref: > apl.event.id]
  recipient_id uuid [ref: > apl.recipient.id]
  budget_min int [null]
  budget_max int [null]
  features_like text[] [not null, default: `'{}'`]
  features_not_like text[] [not null, default: `'{}'`]
  features_ng text[] [not null, default: `'{}'`]
  context_text text [not null]
  context_vector vector [null, note: 'dim=1536']
  embedding_model text [not null]
  embedding_version int [not null, default: 1]
  context_hash text [unique]
  created_at timestamptz [not null, default: `now()`]
}

Table apl.favorite {
  id uuid [pk]
  user_id uuid [not null, ref: > auth.users.id]
  event_id uuid [ref: > apl.event.id, null, note: '任意']
  recipient_id uuid [ref: > apl.recipient.id, null, note: '任意']
  item_id uuid [ref: > apl.item.id]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [null]

  // UNIQUE: (user_id, event_id, recipient_id, item_id)
  // NOTE: NULLをCOALESCEで固定値に潰してUNIQUE化
  indexes {
    (user_id)
    (event_id)
    (recipient_id)
    (event_id, recipient_id)
  }
}

Table apl.recommendation {
  id uuid [pk]
  user_id uuid [ref: > auth.users.id]
  context_id uuid [ref: > apl.context.id]
  algorithm text [null, note: 'pgvector_cosine / hybrid / mmr']
  params jsonb [null]
  created_at timestamptz [not null, default: `now()`]
}

Table apl.recommendation_item {
  id uuid [pk]
  recommendation_id uuid [ref: > apl.recommendation.id]
  item_id uuid [ref: > apl.item.id]
  rank int [null]
  score float [null]
  vector_score float [null]
  rerank_score float [null]
  reason jsonb [null]

  indexes {
    (recommendation_id, rank) [unique]
    (recommendation_id, item_id) [unique]
  }
}


//////////////////////////////////////////////////////
// collector（楽天APIステージング）
// 方針：レスポンスを保持。raw_jsonは原則not null。
// 追加：source_hash による変更検知（変更なしならETLスキップ）
//////////////////////////////////////////////////////

Table collector.rakuten_genre {
  genre_id        int [pk]
  genre_name      varchar
  genre_level     integer
  parent_genre_id int [ref: > collector.rakuten_genre.genre_id, null]
  path            varchar
  raw_json jsonb [not null]

  source_hash varchar [null, note: '変更検知用ハッシュ']
  source_version int [null, note: 'hash生成ロジックver']

  created_at      timestamptz [default: `now()`]
  updated_at      timestamptz [default: `now()`]
}

Table collector.rakuten_tag_group {
  tag_group_id    int [pk]
  tag_group_name  varchar

  raw_json        jsonb [not null]

  source_hash varchar [null, note: '変更検知用ハッシュ']
  source_version int [null, note: 'hash生成ロジックver']

  created_at      timestamptz [default: `now()`]
  updated_at      timestamptz [default: `now()`]
}

Table collector.rakuten_tag_detail {
  tag_id        int [pk]
  tag_name      varchar
  tag_group_id  int [ref: > collector.rakuten_tag_group.tag_group_id]

  raw_json      jsonb [not null]

  source_hash varchar [null, note: '変更検知用ハッシュ']
  source_version int [null, note: 'hash生成ロジックver']

  created_at    timestamptz [default: `now()`]
  updated_at    timestamptz [default: `now()`]
}

Table collector.rakuten_genre_tag {
  genre_id     int [ref: > collector.rakuten_genre.genre_id]
  tag_group_id int [ref: > collector.rakuten_tag_group.tag_group_id]
  tag_id       int [ref: > collector.rakuten_tag_detail.tag_id]

  raw_json     jsonb [not null]

  created_at   timestamptz [default: `now()`]

  indexes {
    (genre_id, tag_id) [pk]
    (tag_id)
  }
}

//////////////////////////////////////////////////////
// Item Search（最新のみ保持 + 変更検知）
//////////////////////////////////////////////////////
Table collector.rakuten_item_source {
  item_code             varchar [pk]
  fetched_at            timestamptz [default: `now()`, note: 'API取得日時（最新で上書き）']

  // 変更検知
  source_hash           varchar [not null, note: 'raw/主要項目から生成したhash（変更検知用）']
  source_version        int [not null, note: 'hash生成ロジックver']

  item_name             varchar
  catchcopy             varchar
  item_caption          text
  item_price            int
  item_url              text
  affiliate_url         text

  image_flag            int
  availability          int
  tax_flag              int
  postage_flag          int
  credit_card_flag      int
  ship_overseas_flag    int
  ship_overseas_area    varchar
  asuraku_flag          int
  asuraku_area          varchar
  asuraku_closing_time  varchar

  review_count          int
  review_average        numeric(5,2)

  point_rate            int
  point_rate_start_time timestamptz
  point_rate_end_time   timestamptz
  affiliate_rate        int
  sale_start_time       timestamptz
  sale_end_time         timestamptz

  gift_flag             int

  genre_id              int [null]
  shop_code             varchar

  // shop名/url はItem Searchにある前提ならここにも持てる（任意）
  shop_name             varchar
  shop_url              text
  shop_of_the_year_flag int

  raw_json              jsonb [not null]

  created_at            timestamptz [default: `now()`]
  updated_at            timestamptz [default: `now()`]

  indexes {
    (fetched_at)
    (genre_id)
    (shop_code)
    (source_hash)
  }
}

Table collector.rakuten_item_image_source {
  item_code   varchar [not null, ref: > collector.rakuten_item_source.item_code]
  size        varchar [not null, note: 'small|medium']
  url         text [not null]
  sort_order  int [not null]

  raw_json    jsonb [not null]

  created_at  timestamptz [default: `now()`]

  indexes {
    (item_code, size, sort_order) [pk]
    (item_code)
  }
}

Table collector.rakuten_item_tag {
  item_code varchar [not null, ref: > collector.rakuten_item_source.item_code]
  tag_id int [not null, note: 'タグマスタは全タグデータを保持できるわけではなく、Itemに紐づいたタグデータを指定して取得する必要がある（外部API制約）。\nそのため、collector.rakuten_tag_detail.tag_idとFK制約を張るとDB不整合が高頻度で発生する恐れがあるため、FKは張らない']

  raw_json jsonb [not null]

  created_at timestampz [default: `now()`]

  indexes {
    (item_code, tag_id)
  }
}

//////////////////////////////////////////////////////
// Ranking API（run + item）
//////////////////////////////////////////////////////
Table collector.rakuten_ranking_run {
  run_id       int [pk, increment]
  fetched_at   timestamptz [default: `now()`]
  title        varchar
  genre_id     int [null]
  age_group    int [null]
  sex          int [null]
  period       varchar [not null, note: 'daily|realtime|weekly...']

  raw_json     jsonb [not null]

  source_hash varchar [null, note: 'ランキング内容のハッシュ（run_id, rank, item_codeの3要素）']
  source_version int [null, note: 'hash生成ロジックver']
  last_etl_source_hash varchar [null, note: '前回ETL処理時のsource_hash']
  last_etl_processed_at timestamptz [null, note: '前回ETL処理時刻']

  created_at   timestamptz [default: `now()`]
  updated_at   timestamptz [default: `now()`]

  indexes {
    (period, fetched_at)
    (genre_id, fetched_at)
  }
}

Table collector.rakuten_ranking_item {
  run_id      int [not null, ref: > collector.rakuten_ranking_run.run_id]
  rank        int [not null]
  item_code   varchar [not null]
  raw_json    jsonb [not null]
  created_at  timestamptz [default: `now()`]

  indexes {
    (run_id, rank) [pk]
    (item_code)
  }
}

//////////////////////////////////////////////////////
// 実行ログ
//////////////////////////////////////////////////////
Table collector.job_run_log {
  run_id        bigserial [pk]

  job_name      varchar   [not null, note: '例: fetch_item / etl_item / build_features']
  job_version   int       [not null, default: 1, note: 'ジョブ実装の版（破壊的変更時に更新）']

  status        varchar   [not null, note: 'RUNNING|SUCCESS|PARTIAL|FAILED']
  started_at    timestamptz [not null, default: `now()`]
  finished_at   timestamptz [null]

  // 実行引数・実行コンテキスト
  args_json     jsonb     [not null, default: `'{}'::jsonb`, note: 'target_date/limit/dry_runなど']
  env_json      jsonb     [not null, default: `'{}'::jsonb`, note: '任意: env名, git sha, host等']

  // 件数メトリクス（ジョブごとに自由）
  counts_json   jsonb     [not null, default: `'{}'::jsonb`, note: 'processed/skipped/inserted等']

  // エラー情報（要約）
  error_code    varchar   [null, note: '例: AUTH_ERROR / DATA_INTEGRITY / RATE_LIMIT']
  error_summary text      [null, note: '最大1KB程度の要約（人が読む）']
  error_json    jsonb     [not null, default: `'{}'::jsonb`, note: 'スタックトレース等（短め推奨）']

  // 再実行・追跡用

  // parent_run_idは使い方のイメージが湧かないため、MVP初期では不要とした。
  // parent_run_id bigint    [null, ref: > collector.job_run_log.run_id, note: '再実行の元run']
  correlation_id varchar  [null, note: '同一日次バッチ一連の相関ID（例: 20251215_daily_01）']

  created_at    timestamptz [not null, default: `now()`]
  updated_at    timestamptz [not null, default: `now()`]

  indexes {
    (job_name, started_at)
    (status, started_at)
    (correlation_id)
  //  (parent_run_id)
  }
}
// いらないと思ってきたので、MVP初期では構築対象外とする
// Table collector.genre_fetch_log {
//   id             int [pk, increment]
//   job_run_id     int [not null, ref: > collector.job_run_log.job_run_id]
//   genre_id       int [ref: > collector.rakuten_genre.genre_id, null]
//   api_name       varchar [not null]
//   fetched_at     timestamptz [default: `now()`]

//   requested_count int [null]
//   received_count  int [null]
//   upserted_count  int [null]
//   skipped_count   int [null]

//   status         varchar [not null, note: 'SUCCESS|FAILED']
//   message        text [null]
//   raw_json        jsonb [null]

//   indexes {
//     (job_run_id)
//     (genre_id, api_name, fetched_at)
//     (api_name, fetched_at)
//   }
// }

//////////////////////////////////////////////////////
// ジャンル取得設定
//////////////////////////////////////////////////////
Table collector.target_genre_config {
  genre_id            int [pk]
  is_enabled          bool [default: true]

  use_ranking         bool [default: true]
  max_rank            int [null]

  use_item_search     bool [default: false]
  max_items_per_day   int [null]

  min_price           int [null]
  max_price           int [null]

  min_review_count    int [null]
  min_review_average  numeric(3,2) [null]

  priority            int [default: 5]

  created_at          timestamptz [default: `now()`]
  updated_at          timestamptz [default: `now()`]
}

//////////////////////////////////////////////////////
// 欠損Item回収のためのpendingテーブル（一時テーブル）
//////////////////////////////////////////////////////
Table collector.pending_item_fetch {
  item_code    varchar [pk, note: '回収したい楽天itemCode']
  reason       varchar [not null, note: 'RANKING|MANUAL|RETRY など']
  priority     int [not null, default: 5, note: '0=低〜9=高']
  state        varchar [not null, default: 'NEW', note: 'NEW|DONE|FAILED']
  attempts     int [not null, default: 0]
  last_error   text [null]

  created_at   timestamptz [not null, default: `now()`]
  updated_at   timestamptz [not null, default: `now()`]

  indexes {
    (state, priority, updated_at)
    (reason, created_at)
  }
}

//////////////////////////////////////////////////////
// fetchのためのDBキュー管理テーブル
//////////////////////////////////////////////////////
Table collector.pending_task {
  task_type   varchar [not null, note: 'FETCH_ITEM | FETCH_GENRE | FETCH_TAG | ETL_GENRE_TAG']
  entity_type varchar [not null,note: 'ITEM | GENRE | TAG']
  entity_key  varchar [not null,note: 'item_code / genre_id / tag_id（文字列統一）']

  reason      varchar [not null,note: 'RANKING | ITEM_SOURCE_UPDATE | ETL_DEPENDENCY | MANUAL | RETRY etc.']
  priority    int [not null, default:5, note: '0..9（大きいほど優先）']

  state       varchar [not null,default: 'NEW', note: 'NEW | DOING | DONE | FAILED']
  attempts    int [not null, note: 'default: 0,']
  max_attempts int [not null, default: 5]

  payload_json jsonb [not null, default: `'{}'::jsonb`]
  last_error   text [null]

  leased_until timestamptz [null]
  lease_owner  varchar [null]

  created_at  timestamptz [not null, note: 'default:`now()`']
  updated_at  timestamptz [not null, note: 'default:`now()`']

  indexes {
   (task_type, entity_type, entity_key)
  }
}
